# mcp-server-exploration

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  vars.mk
ex_api/: main.py
ex_docs_indexer_api/: .gitignore  indexer.py  main.py  requirements.txt
ex_simple_mcp/: simple_addition.py
ex_starwars/: main.py  requirements.txt  starwars_data.py
mcp_servers/: connect_api.py  simple_addition.py
mcp_servers/helpers/: swagger.py
shiny/: app.py  requirements.txt
src/openapi_mcp/: chatlas.py  client.py  connect_api.py  map.py  swagger.py
